<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/mountain"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/thre_gear_32"
                    android:layout_marginStart="350dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/canvas"
                    android:padding="80dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp">
                    <TextView
                        android:id="@+id/tv_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/camera"
                        android:textAlignment="center"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        app:drawableTopCompat="@drawable/phot_camera" />
                    <TextView
                        android:id="@+id/tv_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/galery"
                        android:textAlignment="center"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        app:drawableTopCompat="@drawable/images" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collage"
                        android:textAlignment="center"
                        android:paddingLeft="25dp"
                        android:paddingRight="25dp"
                        app:drawableTopCompat="@drawable/collage" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </FrameLayout>

</LinearLayout>